--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <select id="auxiliares_rank"></select>
           </div>
         </div>
-        <div class="muted">Se o policial não estiver na lista, escolha “+ Adicionar policial…” no select de Nomes.</div>
+        <div class="muted">Lista de nomes fixa (cadastre/edite pelo painel do Supabase).</div>
       </div>
 
       <div class="panel">
@@ -211,10 +211,8 @@
     const { data, error } = await supa.from('ranks').select('id,name,sort_order').order('sort_order', { ascending: true });
     if(error){ console.error(error); alert('Erro ao carregar patentes.'); return; }
     RANKS = data || [];
-    // Preenche todos os selects de patente
     RANK_SELECTS.forEach(id => fillRankSelect(id));
   }
-
   function fillRankSelect(id){
     const sel = $(id);
     sel.innerHTML = `<option value="">Selecione a patente…</option>` + RANKS.map(r => `<option value="${r.id}">${esc(r.name)}</option>`).join('');
@@ -224,38 +222,21 @@
     const { data, error } = await supa.from('officers').select('id,name,current_rank_id').eq('active', true).order('name');
     if(error){ console.error(error); alert('Erro ao carregar policiais.'); return; }
     OFFICERS = data || [];
-    // Preenche todos os selects de nome
     NAME_SELECTS.forEach(id => fillOfficerSelect(id));
   }
-
   function fillOfficerSelect(id){
     const sel = $(id);
     sel.innerHTML =
       `<option value="">Selecione…</option>` +
-      OFFICERS.map(o => `<option value="${esc(o.id)}">${esc(o.name)}</option>`).join('') +
-      `<option value="__add__">+ Adicionar policial…</option>`;
+      OFFICERS.map(o => `<option value="${esc(o.id)}">${esc(o.name)}</option>`).join('');
   }
 
-  // Ao trocar o nome, auto-preenche a patente com a "current_rank_id" do officer
+  // Ao trocar o nome, auto-preenche a patente com a "current_rank_id" do officer (sem opção de adicionar)
   function linkNameToRank(){
     NAME_SELECTS.forEach((nameId, idx) => {
       const rankId = RANK_SELECTS[idx];
-      $(nameId).addEventListener('change', async (e) => {
+      $(nameId).addEventListener('change', (e) => {
         const val = e.target.value;
-        if(val === '__add__'){
-          const nome = prompt('Nome do novo policial (como aparecerá):');
-          if(nome && nome.trim()){
-            const defaultRank = RANKS.find(r => r.name === 'SD PM') || RANKS[0];
-            const { error } = await supa.from('officers').insert({ name: nome.trim(), current_rank_id: defaultRank?.id || null });
-            if(error){ console.error(error); alert('Erro ao adicionar policial.'); e.target.value = ''; return; }
-            await loadOfficers();
-            const found = OFFICERS.find(o => o.name === nome.trim());
-            if(found){ e.target.value = found.id; $(rankId).value = found.current_rank_id || ''; }
-          }else{
-            e.target.value = '';
-          }
-          return;
-        }
         const off = OFFICERS.find(o => o.id === val);
         $(rankId).value = off?.current_rank_id || '';
       });
@@ -294,7 +275,7 @@
   function collect(){
     const L=id=>[...$(id).querySelectorAll('input')].map(i=>i.value).filter(Boolean);
     const O=[...$('list-ocorrencias').children].map(d=>{const [h,t]=d.querySelectorAll('input');return{h:h.value,t:t.value}}).filter(o=>o.t);
-    // Nomes (pelo id) e rótulos (nome + patente) para PDF
+
     const officerById = id => OFFICERS.find(o => o.id === id)?.name || '';
     const rankById = id => RANKS.find(r => String(r.id) === String(id))?.name || '';
     const mName = officerById($('motorista_sel').value);
@@ -316,7 +297,6 @@
       ocorrencias:O,abordados:L('list-abordados'),
       resOc:+($('res-oc').value||0),resAp:+($('res-ap').value||0),resAc:+($('res-ac').value||0),
 
-      // também devolvo ids/ranks selecionados para salvar
       _ids: {
         motorista: $('motorista_sel').value, encarregado: $('encarregado_sel').value,
         seguranca: $('seguranca_sel').value, auxiliares: $('auxiliares_sel').value
@@ -361,19 +341,16 @@
     return out;
   }
 
-  /* ==== Monta lista de {nome + patente selecionada} ==== */
+  /* ==== Monta lista de {nome + patente} ==== */
   function selectedOfficerAndRankPairs(){
     const pairs = [];
     const make = (selId, rankId) => {
       const officerId = $(selId).value || '';
       const rankSel = $(rankId).value || '';
-      if(!officerId) return;
+      if(!officerId || !rankSel) return;
       const officer = OFFICERS.find(o => o.id === officerId);
       const rankObj = RANKS.find(r => String(r.id) === String(rankSel));
-      pairs.push({
-        name: officer?.name || '',
-        rank_name: rankObj?.name || ''  // salva a patente do dia como texto
-      });
+      pairs.push({ name: officer?.name || '', rank_name: rankObj?.name || '' });
     };
     make('motorista_sel','motorista_rank');
     make('encarregado_sel','encarregado_rank');
@@ -382,20 +359,20 @@
     return pairs.filter(p => p.name && p.rank_name);
   }
 
-  /* ==== Salvar ilícitos para TODOS com patente do dia ==== */
+  /* ==== Salvar ilícitos ==== */
   async function saveIllicitsToSupabase(){
     const rota = ($('rota').value || '').trim() || null;
     const lines = [...document.querySelectorAll('#list-ilicitos input')].map(i=>i.value).filter(Boolean).join('\n');
     const items = parseIlicitosText(lines);
-    const pairs = selectedOfficerAndRankPairs(); // [{name, rank_name}...]
+    const pairs = selectedOfficerAndRankPairs();
 
     if(!items.length){ alert('Preencha ao menos 1 ilícito.'); return; }
     if(!pairs.length){ alert('Selecione Nome e Patente para a equipe.'); return; }
 
     const rows = pairs.flatMap(({name, rank_name}) =>
       items.map(({item, qty}) => ({
-        officer: name,       // nome oficial do roster
-        rank_at_time: rank_name, // patente escolhida no dia
+        officer: name,
+        rank_at_time: rank_name,
         rota,
         item_type: item,
         quantity: Number(qty)
@@ -416,7 +393,7 @@
   }
   $('saveCloudBtn').addEventListener('click', saveIllicitsToSupabase);
 
-  /* ==== Totais 7 dias (por policial; ignora variação de patente) ==== */
+  /* ==== Totais 7 dias ==== */
   async function showTotals7d(){
     const cutoff = new Date(Date.now()-7*24*60*60*1000).toISOString();
     const { data, error } = await supa
@@ -434,7 +411,6 @@
     });
     renderTotals(agg);
   }
-
   function renderTotals(agg){
     const c = $('totalsContent');
     if(!agg || !Object.keys(agg).length){ c.innerHTML='<div class="muted">Sem dados nos últimos 7 dias.</div>'; $('totalsPanel').style.display='block'; return; }
@@ -452,7 +428,6 @@
     $('totalsPanel').style.display = 'block';
     $('exportCsvBtn').onclick = ()=> exportTotalsCSV(agg);
   }
-
   function exportTotalsCSV(agg){
     const rows = [['policial','item','total']];
     Object.entries(agg).forEach(([off, items])=>{
